--- a/asset/css/styles_work.css
+++ b/asset/css/styles_work.css
@@ -1,34 +1,44 @@
-
-
-
-
-.home-coming h1 {
-    padding: 2rem;
-    font-size: 2.5rem;
+:root{
+    --main-color:rgb(255, 255, 255);
+    --sidebar-color:rgb(52, 62, 61);
+    --text-color:rgb(0, 0, 0);
+    --primary-color:rgb(0, 179, 255);
 }
-
-.messege{
-    padding: 2rem;
+body{
+    height: 100vh;
+    background-color: var(--main-color);
 }
-
-
-body i{
-    font-size: 2rem;
-    color: #06578a;
+.contain{
+    height: 100vh;
 }
-.messege .ri-github-fill{
-    color: #fc5b5b;
-}
-.messege .ri-github-fill:hover{
-    color: #5be1fc;
-    transform: scale(1.1) rotate(5deg);
-}
-
-
-.stack{
-    padding-left:1rem;
-    padding-right:1rem ;
+.sidebar {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
+    justify-content: start;
+    position: absolute;
+    width: 250px;
+    background-color: var(--sidebar-color);
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 95;
+    overflow-y: scroll;
+    
+}
+.sidebar li{
+    height: 50px;
+    margin-top: 10px;
+    list-style:none;
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem;
+    width: 100%;
+}
+.sidebar li span,i{
+    color: #000;
+    padding: 0;
+    margin: 0;
+}
+.menu-bar{
+    margin-top: 4rem;
+    margin-left: -2rem;
 }
